refactor: encapsular debidamente el apartado categories